<resources>
    <string name="app_name">RITMO Movesense DataLogger</string>
    <string name="title_activity_datalogger">Device: </string>
    <string name="instructions_text">This app lets you log data to and download data from multiple Movesense devices. First scan for Movesense Bluetooth devices and then tap to connect to a device. DataLogger view will open when a connection is established.\n\nNOTE: Re-scanning will disconnect connected devices. They will continue logging while disconnected.</string>
    <string name="datalogger_state">DataLogger state:</string>
    <string name="help_text_datalogger">Here you can start and stop logging of resource(s) and list Logbook entries on this device. Tap an entry to get the log content as a raw SBEM or formatted JSON file.</string>
    <string name="start_logging">Start Logging</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="refresh_logbook_list">Refresh logbook list</string>
    <string-array name="datalogger_paths">
        <item>Select a path...</item>
        <item>/Meas/Acc/26</item>
        <item>/Meas/Acc/52</item>
        <item>/Meas/Acc/104</item>
        <item>/Meas/Acc/208</item>
        <item>/Meas/IMU9/26</item>
        <item>/Meas/IMU9/52</item>
        <item>/Meas/IMU9/104</item>
        <item>/Meas/IMU9/208</item>
        <item>/Meas/ECG/50</item>
        <item>/Meas/ECG/100</item>
        <item>/Meas/ECG/200</item>
        <item>/Meas/Acc/26, /Meas/ECG/50</item>
        <item>/Meas/Acc/52, /Meas/ECG/50</item>
        <item>/Meas/Acc/104, /Meas/ECG/100</item>
        <item>/Meas/Acc/208, /Meas/ECG/200</item>
        <item>/Meas/IMU9/26, /Meas/ECG/50</item>
        <item>/Meas/IMU9/52, /Meas/ECG/50</item>
        <item>/Meas/IMU9/104, /Meas/ECG/100</item>
        <item>/Meas/IMU9/208, /Meas/ECG/200</item>
    </string-array>
</resources>

<!--
<item>/Meas/IMU9/208</item>
<item>/Meas/ECG/500</item>
<item>/Meas/HR</item>
<item>/Algo/ECGRR</item>
<item>/Meas/Acc/104</item>
<item>/Meas/IMU9/52:/Meas/ECG/500</item>
<item>/Meas/IMU9/104:/Meas/ECG/500</item>

-->
