<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.movesense.samples.dataloggersample.DataLoggerActivity"
    tools:showIn="@layout/activity_datalogger">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/help_text_datalogger" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:text="@string/datalogger_state" />

        <TextView
            android:id="@+id/textViewDLState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginRight="11dp"
            android:text="--" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="11dp"
            android:text="Current Log ID:" />

        <TextView
            android:id="@+id/textViewCurrentLogID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="--" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginRight="11dp"
            android:text="Path to measure:" />

        <Spinner
            android:id="@+id/path_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/datalogger_paths" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCreateNewLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="onCreateNewLogClicked"
            android:text="Create New Log"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonStartLogging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStartLoggingClicked"
            android:text="@string/start_logging"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonStopLogging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStopLoggingClicked"
            android:text="@string/stop_logging"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonRefreshLogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="onRefreshLogsClicked"
            android:text="@string/refresh_logbook_list"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonEraseLogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onEraseLogsClicked"
            android:text="Erase Logbook"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/headerProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvProgressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewLogbookEntries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</LinearLayout>
